--- a/css/style.css
+++ b/css/style.css
@@ -425,36 +425,41 @@ td,
 th {
   padding: 0;
 }
+/* end normalize */
 
 body {
     background-color: lightgrey;
+    font-family: "Roboto" "Helvetica Neue" sans-serif;
+    font-size: 16px;
+    color: #838994;
+    letter-spacing: 0.03em;
+    -webkit-font-smoothing: antialiased;
+
 }
 
 div {
     border: 1px solid chocolate;
 }
 
+.top-navigation {
+    background-color: #fff;
+}
+
+.top-navigation > .content {
+    width: 970px;
+    height: 70px;
+    margin: 0 auto;
+}
+
+ul {
+    display: inline-block;
+}
+
 .links {
     float: right;
-    padding-right: 27em;
-    color: gray;
-}
+    }
 
-.meet {
-    font-weight: bold;
-    color: darkslategrey;
-}
-
-.links > li {
-    display: inline-block;
-    list-style: none;
-    padding-left: 4em;
-}
-
-.logo {
-    padding-left: 20em;
-}
-
-.links:hover > li{
-    color: black;
+.content {
+    padding: 0px 15px;
+    box-sizing: border-box;
 }
