--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -10,6 +13,7 @@ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+    box-sizing: border-box;
 }
 
 /**
@@ -433,8 +437,6 @@ body {
     font-size: 16px;
     color: #838994;
     letter-spacing: 0.03em;
-    -webkit-font-smoothing: antialiased;
-
 }
 
 div {
@@ -451,15 +453,27 @@ div {
     margin: 0 auto;
 }
 
-ul {
+ul > li{
     display: inline-block;
+    list-style: none;
 }
 
 .links {
     float: right;
-    }
+}
 
 .content {
     padding: 0px 15px;
     box-sizing: border-box;
+}
+
+.active {
+    color: #4C5058;
+    font-weight: 600;
+}
+
+li:hover {
+    color:black;
+    cursor: pointer;
+    transition: color 0.5s ease;
 }
