--- a/css/style.css
+++ b/css/style.css
@@ -478,30 +478,31 @@ li:hover {
     transition: color 0.5s ease;
 }
 
-.hero {
+.introduction {
     color: white;
     text-align: center;
     background-image: url('../images/hero.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 65rem;
+    background-position: 0 bottom;
+    height: 45.938rem;
+    overflow: auto;
+}
+
+.introduction h1,
+.introduction h3 {
+    font-weight: 300;
     box-sizing: border-box;
 }
 
-h1 {
-    font-weight: 100;
-    margin-top: 0;
-    padding-top: 30rem;
-    font-size: 350%;
+.introduction h1 {
+    margin-top: 17.5rem;
+    font-size: 3.125rem;
 }
 
-h2 {
-    font-weight: 100;
-    font-size: 200%;
-}
-
-.hero > h2 {
-    margin-top: -0.8rem;
+.introduction h3 {
+    margin-top: -1.25rem;
+    font-size: 1.563rem;
 }
 
 button {
@@ -511,4 +512,6 @@ button {
     border-color: #F15A29;
     padding: 1rem 1.5rem;
     font-size: 1.125rem;
+    text-shadow: none;
 }
+
