--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ ul > li{
     font-weight: 600;
 }
 
-li:hover {
+.links:hover {
     color:black;
     cursor: pointer;
     transition: color 0.5s ease;
@@ -489,21 +489,28 @@ li:hover {
     overflow: auto;
 }
 
-.introduction h1,
-.introduction h3 {
+h1,
+h3 {
     font-weight: 300;
     box-sizing: border-box;
 }
 
-.introduction h1 {
-    margin-top: 17.5rem;
+h1 {
+    text-align: center;
     font-size: 3.125rem;
 }
 
-.introduction h3 {
-    margin-top: -1.25rem;
+h3 {
     font-size: 1.563rem;
 }
+
+.introduction h1 {
+    margin-top: 17.5rem;
+    }
+
+.introduction h3 {
+    margin-top: -1.25rem;
+    }
 
 button {
     background-color: #F15A29;
@@ -515,3 +522,15 @@ button {
     text-shadow: none;
 }
 
+.information {
+    color: black;
+}
+
+.icon {
+    display: inline-block;
+}
+
+.svg {
+    height: 10rem;
+    width: 10rem;
+}
