--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,9 @@ ul > li{
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5{
     font-weight: 300;
     box-sizing: border-box;
 }
@@ -506,6 +508,15 @@ h1 {
 
 h3 {
     font-size: 1.563rem;
+}
+
+h4, h5 {
+    text-align: center;
+    color: black;
+}
+
+h4 {
+    font-weight: bold;
 }
 
 .introduction h1 {
@@ -536,5 +547,46 @@ button {
 .cases .devices {
     width: 7%;
     display: inline-block;
-    margin: 0 2rem 0 2rem;
+    margin: 0 7rem;
+}
+
+.devices-text {
+    font-size: 1.5rem;
+    display: inline-block;
+    width: 15%;
+    margin: 0 2.2rem 8rem 2.2rem;
+}
+
+/*.icons {
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.icons > li {
+
+    padding: 0 1.5rem 0 1.5rem;
+    border-width: 0.1rem;
+}
+
+.icons > li:hover {
+    cursor: pointer;
+}*/
+
+.social {
+    text-align: center;
+    padding: 0;
+}
+
+.icons {
+    padding: 0;
+}
+
+.fa {
+    height: 2rem;
+    width: 2rem;
+    border: black solid;
+    border-radius: 150%;
+    border-width: 0.1rem;
+    border-color: gray;
 }
