social buttons moved

--- a/css/style.css
+++ b/css/style.css
@@ -586,17 +586,15 @@ button {
     padding: 0 1.5rem 0 1.5rem;
     border-width: 0.1rem;
 }
-.icons > li:hover {
-    cursor: pointer;
-}*/
+*/
 
 .social {
     text-align: center;
     padding: 0;
 }
 
-.icons li {
-    margin-top: 0.rem;
+.icons {
+padding: 0;
 }
 
 .fa {
@@ -605,7 +603,10 @@ button {
     border-style: solid;
     border-radius: 50%;
     border-width: 0.1rem;
-    border-color: gray;
+    border-color: dimgray;
+    margin: 0 1.5rem;
+    padding: .5rem;
+
  }
 
 .fa-twitter {
@@ -618,4 +619,8 @@ button {
 
 .fa-instagram {
     color: #517FA4;
+}
+
+.icons > li:hover {
+    cursor: pointer;
 }
